--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ a{
 
 
 .banner{
-    background-image: url('../img/banner/img.png');
+    background-image: url('../img/top_b/img.png');
     background-position-y: -170px;
     background-position-x: 40px;
     position: relative;
