--- a/css/style.css
+++ b/css/style.css
@@ -1876,6 +1876,10 @@ a{
         top: 50px;
         transform: rotate(13.13deg);
     }
+    .photo_galery_mobile .tabs_list{
+        flex-direction: column;
+        text-align: center;
+    }
 }
 
 
