--- a/css/style.css
+++ b/css/style.css
@@ -1874,6 +1874,10 @@ a{
         font-size: 14px;
         line-height: 20px;
     }
+    .photo_galery_mobile .tabs_list{
+        flex-direction: column;
+        align-items: center;
+    }
    
 }
 
